# enhancement-geometry

./: .gitignore  AGENTS.md  API.md  LICENSE  README.md  lofted_surface_voronoi_generation.ipynb  pyproject.toml  voronoi_jewelry.ipynb
configs/: 20260328_180742.json  20260328_181639.json  20260328_181647.json  20260328_183814.json  20260328_184029.json  20260328_184045.json  20260405_002447.json  20260405_213101.json  20260405_214934.json  20260405_232617.json  20260405_234529.json  20260405_failmask058.json  20260405_failmask078.json  20260405_failmask124.json  20260406_003124.json  20260406_130048.json  20260407_005429.json  20260407_134445.json
data/: lofted_surface_inputs.json  voronoi_points_inputs.json
docs/: PERFORMANCE.md
exports/: lofted_surface_voronoi_shell.stl
src/compass_web/: __init__.py  cli.py  config.py  lofted_surface_voronoi.py  pipeline.py  smoothing.py
