[project]
name = "compass-web"
version = "0.1.3"
description = "Generate 3D-printable voronoi shell geometry from parametric inputs."
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "compas>=2.15.1",
    "jupyterlab>=4.5.6",
    "numpy>=2.4.3",
    "pymeshfix>=0.18.0",
    "pythreejs>=2.4.2",
    "pyvista>=0.47.1",
    "scipy>=1.17.1",
    "trame>=3.12.0",
    "trame-vtk>=2.11.6",
    "trame-vuetify>=3.2.1",
    "trimesh>=4.11.5",
    "typer>=0.15",
]

[project.scripts]
materialize = "compass_web.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
